--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "mern-stack",
+  "name": "server",
   "version": "1.0.0",
-  "description": "This is a MERN Stack Course.",
+  "description": "Task Manager Backend",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
