changed origin in cors

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 # VITE_BACKEND_URL = http://localhost:5000/api
-VITE_BACKEND_URL = https://manager-ten-sable.vercel.app/api
+VITE_BACKEND_URL = "https://manager-ten-sable.vercel.app/api"
